@@ -1,3 +1,8 @@
+2015-05-08  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Make sure that all macros in HepMCDefs.h have a numerical value
+	(thanks to Marek Schoenherr for the heads-up).
+
 2015-04-03  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding weight and weight names accessors to GenEvent, for
